# zig-rtt

./: LICENSE  README.md  build.zig  build.zig.zon
src/: root.zig
src/segger_rtt/: CMakeLists.txt
src/segger_rtt/RTT/: SEGGER_RTT.h
