
project(segger_rtt_${CMAKE_SYSTEM_PROCESSOR_LOWER}_${SST_OPT_SUBARCH} VERSION 1.0.0 LANGUAGES C)

add_library(${PROJECT_NAME} STATIC)

set (SEGGER_RTT_SRCS
    ${CMAKE_CURRENT_LIST_DIR}/RTT/SEGGER_RTT.c
    ${CMAKE_CURRENT_LIST_DIR}/RTT/SEGGER_RTT_printf.c

)

set (SEGGER_RTT_INCS
    ${CMAKE_CURRENT_LIST_DIR}/RTT/SEGGER_RTT.h
    ${CMAKE_CURRENT_LIST_DIR}/Config/SEGGER_RTT_Conf.h
)

target_sources(
  ${PROJECT_NAME}
  PRIVATE
  ${SEGGER_RTT_SRCS}

  PUBLIC
  ${SEGGER_RTT_INCS}
)

if (SEGGER_RTT_ADDITIONAL_DEFINITIONS)
  target_compile_definitions(
    ${PROJECT_NAME}
    PRIVATE
    ${SEGGER_RTT_ADDITIONAL_DEFINITIONS}
  )
endif()

target_include_directories(
  ${PROJECT_NAME}
  PUBLIC
  $<INSTALL_INTERFACE:include>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/RTT>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/Config>
  PRIVATE
  ${SEGGER_RTT_ADDITIONAL_DEFINITIONS}
  ${CMAKE_CURRENT_LIST_DIR}/Config
)

install(
  TARGETS
  ${PROJECT_NAME}
  EXPORT
  segger-rtt-export
  LIBRARY
  DESTINATION lib
  PUBLIC_HEADER
  DESTINATION include
)
